Javassist 모듈 추가 및 Example class 추가. 실행: java -javaagent:Javassist-1.0.0-SNAPSHOT.jar com.devarchi33.excer.DoSomething

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,10 @@
 .idea/
 target/
 *.iml
+Javassist/*.iml
+Javassist/.classpath
+Javassist/.project
+Javassist/.settings/
 Thread/*.iml
 Thread/.classpath
 Thread/.project
