--- a/pom.xml
+++ b/pom.xml
@@ -40,6 +40,7 @@
         <module>Servlet</module>
         <module>ClassLoader</module>
         <module>Reflection</module>
+        <module>Javassist</module>
     </modules>
 
     <properties>
