netty 모듈 추가, EchoServer, EchoClient 추가.

--- a/pom.xml
+++ b/pom.xml
@@ -41,6 +41,7 @@
         <module>ClassLoader</module>
         <module>Reflection</module>
         <module>Javassist</module>
+        <module>Netty</module>
     </modules>
 
     <properties>
